# box2md

./: .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  build.rs  gemini-extension.json
.claude/rules/: rust.md  vscode.md
.github/workflows/: ci.yml  release.yml
docs/: skills.md
scripts/: set-version.sh
skills/box2md-shared/: SKILL.md
skills/box2md-to-html/: SKILL.md
skills/box2md-to-md/: SKILL.md
skills/recipe-bulk-convert/: SKILL.md
skills/recipe-clipboard-roundtrip/: SKILL.md
src/: boxnote.rs  cli.rs  clipboard.rs  io.rs  lib.rs  main.rs
src/convert/: boxnote_to_md.rs  html_to_md.rs  md_to_boxnote.rs  md_to_html.rs  mod.rs
tests/: boxnote_to_md.rs  edge_cases.rs  html_to_md.rs  md_to_boxnote.rs  md_to_html.rs  performance.rs  round_trip.rs
tests/fixtures/: blockquote.boxnote  blockquote.md  boxnote_nested.html  checklist.boxnote  checklist.md  code_block.boxnote  code_block.md  formatting.boxnote  formatting.html  formatting.md  formatting_tohtml.md  headings.boxnote  lists.html  lists_html.md  lists_nested.boxnote  lists_tohtml.html  lists_tohtml.md  simple.boxnote  table.boxnote  table.html  table.md  table_html.md  table_tohtml.html  table_with_list.boxnote  table_with_list.md
vim/doc/: box2md.txt
vim/plugin/: box2md.vim
vscode/: .eslintrc.cjs  .vscode-test.mjs  .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode/src/: commandRunner.ts  conversionService.ts  editorIO.ts  errors.ts  extension.ts  notifications.ts  output.ts  runtime.ts  setupGuide.ts  types.ts
(+9 files in other folders)
