[package]
name = "box2md"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comrak = "0.50"
htmd = "0.5"
arboard = "3.6"
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
